plugins {
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    api project(":etl-core")

    implementation 'org.apache.beam:beam-runners-google-cloud-dataflow-java'
    implementation 'org.apache.beam:beam-sdks-java-io-kafka'

    testImplementation 'com.google.cloud:google-cloud-nio'
    testImplementation 'org.junit.vintage:junit-vintage-engine'
    testImplementation 'org.assertj:assertj-core'
    testRuntimeOnly 'org.apache.beam:beam-runners-direct-java'
}

/*
 * Execute the specified main class with JavaExecTask and additional execution arguments
 */
tasks.register('execute', JavaExec) {
    group = "Execution"
    description = "Run the main class with JavaExecTask and additional arguments"

    mainClass = System.getProperty("mainClass")
    classpath = sourceSets.main.runtimeClasspath
    systemProperties System.getProperties()
    args System.getProperty("exec.args") != null ? System.getProperty("exec.args").split() : ""
}
